# Ontology-based-Watch-Generator

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  THIRD_PARTY_ASSETS.md  pyproject.toml
.superpowers/sdd/: progress.md
docs/architecture/: artifact-envelope.md  computational-engineering.md  migration-boundary.md  reference-baseline-contract.md  upstream-contribution-map.md
docs/patterns/: pattern-01-central-display.md  pattern-02-separate-serial-display.md  pattern-03-independent-display.md
docs/provenance/: explorer-artifact-transcoder.md  text-to-cad-reference.md
docs/release/: 0.1.0-preflight.md
docs/superpowers/plans/: 2026-07-11-equivalence-migration.md  2026-07-12-pattern2-capture-runtime-and-handoff-repair.md  pattern1-source-call-chain-audit.md  (+11 more)
examples/: rejection-seeds.json  release-seeds.json
reference_baselines/: pattern_01.json  pattern_02.json  pattern_03.json
scripts/: capture_reference_baseline.py  generate_and_open.py  reference_orchestration.py  run_release_matrix.py  verify_reference_backend.py
src/ontology_watch_generator/: __init__.py  cli.py
tests/integration/: test_artifact_envelope.py  test_explorer_artifacts.py  test_pattern_01_generation.py  test_pattern_02_generation.py  test_pattern_03_generation.py  test_reference_backend_integrity.py
tests/packaging/: test_wheel_contents.py
tests/parity/: test_pattern_01_parity.py  test_pattern_02_parity.py  test_pattern_03_parity.py  test_reference_baselines.py
tests/regression/: test_generate_and_open.py  test_release_matrix.py
(+110 files in other folders)
